# Cognitive-Intent-Engine

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
backend/: __init__.py  main.py
backend/adaptive/: __init__.py  responder.py
backend/anomaly/: __init__.py  detector.py
backend/api/: __init__.py  server.py
backend/calibration/: __init__.py  baseline.py
backend/events/: __init__.py  detector.py
backend/fusion/: __init__.py  context_fusion.py  decision_fusion.py  feature_fusion.py
backend/models/: __init__.py  audio_emotion.py  temporal.py  vision_emotion.py
backend/models/weights/: intent_classifier.joblib
backend/pipelines/: __init__.py  audio_pipeline.py  orchestrator.py  vision_pipeline.py
backend/reasoning/: __init__.py  explain.py  ml_classifier.py  rule_engine.py  rules.yaml
backend/state/: __init__.py  store.py
backend/utils/: __init__.py  config.py  logging.py  schemas.py  timing.py
config/: default.yaml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: EmotionChart.tsx  EventLog.tsx  Gauges.tsx  ReasoningPanel.tsx  Timeline.tsx  VideoPanel.tsx
frontend/src/hooks/: useWebSocket.ts
scripts/: README_jetson.md  convert_to_tflite.py  record_session.py  run_dev.ps1  run_dev.sh
tests/: test_calibration.py  test_events.py  test_fusion.py  test_models.py  test_rule_engine.py  test_schemas.py
training/: README.md  train_audio_emotion.py  train_temporal.py  train_vision_emotion.py
