[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-state-engine"
version = "0.1.0"
description = "Real-time multimodal cognitive state & intent engine (vision + audio)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Arshia Keshvari (@TeslaNeuro)" }]
license = { text = "MIT" }

[tool.setuptools.packages.find]
include = ["backend*", "training*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
